[package]
name = "aoc-2019"
version = "0.1.0"
authors = ["Pete Wildsmith <pete@weargoggles.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmath = "0.2.1"

[[bin]]
name = "day1"
path = "src/day1.rs"
src = "src/day1.rs"